examples/test/testpolicy18410.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18410
  namespace: namespace387
spec:
  podSelector:
    matchLabels:
      key7: value10
      key38: value3
      key43: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value42
          key9: value4
      podSelector:
        matchLabels:
          key35: value21
          key8: value9
